--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
                 <img src="img/Logo.png" alt="logo boolean">
                 <span class="color-principal">Toboolist</span>
             </div>
-
         </header>
         <main>
+            <!-- small container -->
             <div class="small-container background-white">
-                <span class="form-button" id="button1">Add Task</span>
+                <span class="form-button color-blu">Add Task</span>
                 <span class="form-button" id="button2">Add Section</span>
-                
             </div>
+            <!-- big container -->
             <div class="big-container background-white">
-
+                <h2>&#9660;New task</h2>
+                <ul>
+                    <li>
+                        <span class="check"> &#10004;</span>
+                        Quarterly Newsletter 
+                        <span class="box color-blu">Editorial</span>
+                    </li>
+                </ul>
             </div>
 
         </main>
