completed the second list

--- a/index.html
+++ b/index.html
@@ -22,14 +22,44 @@
             </div>
             <!-- big container -->
             <div class="big-container background-white">
-                <h2>&#9660;New task</h2>
-                <ul>
-                    <li>
-                        <span class="check"> &#10004;</span>
-                        Quarterly Newsletter 
-                        <span class="box color-blu">Editorial</span>
-                    </li>
-                </ul>
+                <!-- fisrt list -->
+                <div>
+                    <h2>&#9660;New task</h2>
+                    <ul>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Quarterly Newsletter 
+                            <span class="box color-blu">Editorial</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- second list -->
+                <div class="list">
+                    <h2>&#9660;Today</h2>
+                    <ul>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Recruiting blog post
+                            <span class="box color-blu">Editorial</span>
+                        </li>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Mobile app launch
+                            <span class="box color-violet">Q1 Goals</span>
+                        </li>
+                        <li>
+                            <span class="formck no-check"> &#x2716;</span>
+                            Recruiting blog post
+                            <span class="box color-teal">Recruiting</span>
+                        </li>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Recruiting blog post
+                            <span class="box color-orange">Mobile</span>
+                        </li>
+                    </ul>
+                    
+                </div>
             </div>
 
         </main>
