finish the list

--- a/index.html
+++ b/index.html
@@ -58,7 +58,31 @@
                             <span class="box color-orange">Mobile</span>
                         </li>
                     </ul>
-                    
+                </div>
+                
+                <div class="list">
+                    <h2>&#9660;Upcoming</h2>
+                    <ul>
+                        <li>
+                            <span class="formck no-check"> &#x2716;</span>
+                            Recruiting blog post
+                        </li>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Mobile app launch
+                            <span class="box color-pink">Q1 Goals</span>
+                        </li>
+                        <li>
+                            <span class="formck check">&#10004;</span>
+                            Recruiting blog post
+                            <span class="box color-green">Recruiting</span>
+                        </li>
+                        <li>
+                            <span class="formck check"> &#10004;</span>
+                            Recruiting blog post
+                            <span class="box color-blu">Editorial</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
