fixed list names

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                         </li>
                         <li>
                             <span class="formck no-check"> &#x2716;</span>
-                            Recruiting blog post
+                            Interview John H.
                             <span class="box color-teal">Recruiting</span>
                         </li>
                         <li>
                             <span class="formck check"> &#10004;</span>
-                            Recruiting blog post
+                            Summit update to mobile storefronts
                             <span class="box color-orange">Mobile</span>
                         </li>
                     </ul>
@@ -65,21 +65,21 @@
                     <ul>
                         <li>
                             <span class="formck no-check"> &#x2716;</span>
-                            Recruiting blog post
+                            Schedule meeting with Alex
                         </li>
                         <li>
                             <span class="formck check"> &#10004;</span>
-                            Mobile app launch
-                            <span class="box color-pink">Q1 Goals</span>
+                            Homepage refresh
+                            <span class="box color-pink">Website</span>
                         </li>
                         <li>
                             <span class="formck check">&#10004;</span>
-                            Recruiting blog post
-                            <span class="box color-green">Recruiting</span>
+                            Onboard new Sales team members
+                            <span class="box color-green">Sales</span>
                         </li>
                         <li>
                             <span class="formck check"> &#10004;</span>
-                            Recruiting blog post
+                            Review editorial calendar
                             <span class="box color-blu">Editorial</span>
                         </li>
                     </ul>
