--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="big-container background-white">
                 <!-- fisrt list -->
                 <div>
-                    <h2>&#9660;New task</h2>
+                    <h2><span class="triangle">&#9660;</span> New task</h2>
                     <ul>
                         <li>
                             <span class="formck check"> &#10004;</span>
@@ -35,7 +35,7 @@
                 </div>
                 <!-- second list -->
                 <div class="list">
-                    <h2>&#9660;Today</h2>
+                    <h2><span class="triangle">&#9660;</span>Today</h2>
                     <ul>
                         <li>
                             <span class="formck check"> &#10004;</span>
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div class="list">
-                    <h2>&#9660;Upcoming</h2>
+                    <h2><span class="triangle">&#9660;</span>Upcoming</h2>
                     <ul>
                         <li>
                             <span class="formck no-check"> &#x2716;</span>
